# rust-web-server-practice

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  diesel.toml
entity/: Cargo.toml
entity/src/: career.rs  lib.rs  mod.rs  prelude.rs  user.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/api/: authorization_code.rs  create_career.rs  fetch_access_token.rs  fetch_career.rs  fetch_user.rs  mod.rs  update_user.rs  user.rs
src/domain/: mod.rs  schema.rs
src/domain/auth/: entity.rs  fetch_access_token.rs  mod.rs
src/domain/career/: create_career.rs  entity.rs  find_by_user_id.rs  mod.rs
src/domain/user/: create_user.rs  entity.rs  fetch_one_user.rs  mod.rs  update_user.rs
src/infrastructure/: database.rs  mod.rs  server.rs
src/middleware/: auth_middleware.rs
src/repositories/: career.rs  mod.rs  user.rs
