[package]
name = "rust_decafo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
oauth2 = "4.2"
chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = {version="1.0", features=["derive"]}