[package]
name = "rust_decafo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6"
oauth2 = "4.2"
chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = {version="1.0", features=["derive"]}
jsonwebtoken = "8.1.1"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }