[package]
name = "rust_decafo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6"
oauth2 = "4.3.0"
chrono = "^0"
uuid = { version ="1.2.2", features = ["serde", "v4"] }
dotenv = "0.15.0"
serde = {version="1.0", features=["derive"]}
jsonwebtoken = "8.1.1"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
futures-util = "0.3"

entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "^0"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
]